# frame-gpui-updater-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json
.github/workflows/: release.yml  run_bundling.yml
frame-app/: Cargo.toml  README.md
frame-app/resources/app-icons/: icon.icns
frame-app/src/: app_info.rs  app_persistence.rs  capabilities.rs  conversion_events.rs  file_filters.rs  gstreamer_runtime.rs  lib.rs  main.rs  native_dialogs.rs  notifications.rs  runtime_binaries.rs  source_metadata.rs  theme.rs  update_runtime.rs
frame-app/src/app/: chrome.rs  conversion.rs  file_list_panel.rs  files.rs  fixtures.rs  logs_panel.rs  logs_state.rs  metadata.rs  mod.rs  motion.rs  preview_actions.rs  primitives.rs  render.rs  runtime.rs  settings_actions.rs  state.rs  tests.rs  update_actions.rs  workspace.rs
frame-app/src/app/components/: button.rs  list_item.rs  mod.rs  scrollbar.rs
frame-app/src/app/input/: actions.rs  element.rs  entity.rs  mod.rs  runtime.rs  text.rs
frame-app/src/app/preview_panel/: crop.rs  crop_overlay.rs  mod.rs  overlay.rs  panel.rs  timeline.rs  toolbar.rs  viewport.rs
frame-app/src/app/settings_panel/: audio.rs  images.rs  metadata.rs  mod.rs  output.rs  panel.rs  presets.rs  shared.rs  source.rs  subtitles.rs  video.rs
frame-app/src/assets/: mod.rs  tests.rs
frame-app/src/conversion_runner/: config.rs  controller.rs  mod.rs  process.rs  runner.rs  tests.rs
frame-app/src/file_queue/: format.rs  item.rs  mod.rs  queue.rs  status.rs  tests.rs
frame-app/src/preview/: crop.rs  media.rs  mod.rs  overlay.rs  tests.rs  timeline.rs
frame-app/src/preview_engine/: gstreamer_backend.rs  image_loader.rs  session.rs  tests.rs  types.rs
frame-app/src/settings/: mod.rs  model.rs  options.rs  rules.rs  source_info.rs  tabs.rs  tests.rs  updates.rs
frame-core/: Cargo.toml
frame-core/src/: capabilities.rs  events.rs  fonts.rs  lib.rs  media_rules.rs  types.rs  upscale.rs
frame-updater/: Cargo.toml
frame-updater/src/: client.rs  error.rs  helper.rs  install.rs  lib.rs  manifest.rs  platform.rs  security.rs
gpui-ce/: Cargo.toml
gpui-ce/src/: assets.rs  conversion_events.rs  file_queue.rs  lib.rs  main.rs  preview.rs  source_metadata.rs  theme.rs
gpui-ce/src/app/: chrome.rs  file_list_panel.rs  fixtures.rs  mod.rs  primitives.rs  render.rs  settings_actions.rs  state.rs  tests.rs
gpui-ce/src/app/components/: button.rs  checkbox.rs  list_item.rs  mod.rs  slider.rs
gpui-ce/src/app/input/: actions.rs  element.rs  entity.rs  mod.rs  runtime.rs  text.rs
gpui-ce/src/app/preview_panel/: toolbar.rs
gpui-ce/src/app/settings_panel/: audio.rs  images.rs  metadata.rs  mod.rs  output.rs  panel.rs  presets.rs  shared.rs  subtitles.rs  video.rs
gpui-ce/src/assets/: mod.rs  tests.rs
gpui-ce/src/conversion_runner/: config.rs  tests.rs
gpui-ce/src/settings/: model.rs  options.rs  tests.rs  updates.rs
inno/: frame.iss
script/: bundle-linux  bundle-mac  bundle-windows.ps1
scripts/: bundle-linux  bundle-macos  setup-ffmpeg.cjs
src-tauri/: Cargo.toml
src-tauri/src/: capabilities.rs  fonts.rs
src-tauri/src/conversion/: codec.rs  events.rs  manager.rs  media_rules.rs  mod.rs  upscale.rs  worker.rs
src/lib/components/preview/: CropAspectBar.svelte  CropOverlay.svelte  PreviewPanel.svelte  PreviewTimeline.svelte  PreviewToolbar.svelte  PreviewTrimOverlay.svelte  PreviewViewport.svelte
src/lib/features/preview/: index.ts  usePreviewCrop.svelte.ts  usePreviewPlayback.svelte.ts  usePreviewRenderer.svelte.ts
src/lib/i18n/locales/: de-DE.json  en-US.json  es-ES.json  fr-FR.json  it-IT.json  ja-JP.json  ko-KR.json  ru-RU.json  zh-CN.json
src/routes/: +page.svelte
tooling/xtask/: Cargo.toml
tooling/xtask/src/: main.rs
