[package]
name = "frame-app"
version = "0.1.0"
edition = "2024"
authors = ["Marek Jozwiak <hexthecoder@gmail.com>"]
license = "GPL-3.0-or-later"
publish = false

[[bin]]
name = "frame"
path = "src/main.rs"

[dependencies]
directories = "6.0.0"
frame-core = { path = "../frame-core" }
gpui = { package = "gpui", git = "https://github.com/gpui-ce/gpui-ce" }
gpui_platform = { git = "https://github.com/gpui-ce/gpui-ce", features = ["font-kit"] }
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSButton", "NSControl", "NSResponder", "NSView", "NSWindow"] }
raw-window-handle = "0.6"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
clone_on_copy = { level = "deny", priority = 9 }
needless_collect = { level = "deny", priority = 8 }
