[package]
name = "frame-app"
version = "0.1.1-lab.3"
edition = "2024"
authors = ["Marek Jozwiak <hexthecoder@gmail.com>"]
license = "GPL-3.0-or-later"
publish = false
build = "build.rs"

[[bin]]
name = "frame"
path = "src/main.rs"

[dependencies]
directories = "6.0.0"
frame-core = { path = "../frame-core" }
frame-updater = { path = "../frame-updater" }
gpui = { package = "gpui", git = "https://github.com/gpui-ce/gpui-ce" }
gpui_platform = { git = "https://github.com/gpui-ce/gpui-ce", features = ["font-kit"] }
gstreamer = "0.25.2"
gstreamer-app = "0.25.2"
gstreamer-pbutils = "0.25.2"
gstreamer-video = "0.25.2"
image = "0.25.10"
notify-rust = "4.18.0"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
semver = "1.0.27"
smallvec = "1.15.1"
sysinfo = "0.31.4"
thiserror = "2.0.18"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_LibraryLoader"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSButton", "NSControl", "NSResponder", "NSView", "NSWindow"] }
raw-window-handle = "0.6"

[build-dependencies]
embed-resource = "3.0.9"
image = "0.25.10"

[package.metadata.bundle]
name = "Frame GPUI Lab"
identifier = "dev.66hex.frame-gpui-updater-lab"
icon = ["resources/app-icons/icon.png"]
resources = ["resources/binaries"]
osx_minimum_system_version = "10.15.7"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
clone_on_copy = { level = "deny", priority = 9 }
needless_collect = { level = "deny", priority = 8 }
