[package]
name = "frame-core"
version = "0.1.1-lab.2"
edition = "2024"
authors = ["Marek Jozwiak <hexthecoder@gmail.com>"]
license = "GPL-3.0-or-later"
publish = false

[dependencies]
font-kit = "0.14.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
clone_on_copy = { level = "deny", priority = 9 }
needless_collect = { level = "deny", priority = 8 }
